# cpp

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  alloc.cpp  amt.cpp  amt.hpp  amt2.cpp  as.hpp  ast.cpp  ast.hpp  camera.hpp  church.cpp  cml.cpp  compressed.cpp  compressed.hpp  const_array.cpp  cps.cpp  create_object.cpp  dependency.cpp  diff.hpp  dynamic_sized.cpp  dynamic_sized.hpp  eigen.hpp  either.hpp  finally.hpp  fix.hpp  flow.cpp  flow.hpp  functor.hpp  gc.cpp  gc.hpp  geometry.cpp  geometry.hpp  gl.hpp  graph.cpp  (+82 more)
lisp/: TODO.org  codegen.cpp  codegen.hpp  context.hpp  error.hpp  eval.cpp  eval.hpp  jit.cpp  jit.hpp  list.hpp  main.cpp  meson.build  parse.cpp  parse.hpp  sexpr.cpp  sexpr.hpp  symbol.cpp  symbol.hpp  syntax.cpp  syntax.hpp  tool.cpp  tool.hpp  types.cpp  types.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
lisp/test/: comment.el  fib.el  fib.py  run.el  unsound.el
pouf/: Makefile  api.hpp  concatenate.hpp  dispatch.hpp  dofs.hpp  fetch.hpp  func.hpp  graph.hpp  graph_data.hpp  init.hpp  integrate.hpp  main.cpp  meson.build  metric.hpp  numbering.hpp  pouf.cpp  pull.hpp  push.hpp  python.cpp  real.hpp  ref.hpp  reset.hpp  rigid_mass.hpp  select.hpp  simulation.hpp  slice.hpp  sparse.hpp  stack.hpp  test.py  traits.hpp  typecheck.hpp  types.hpp  uniform.cpp  uniform.hpp  vec.hpp
pouf/core/: api.hpp  dofs.hpp  func.hpp  graph.hpp  graph_data.hpp  metric.hpp  quat.hpp  range.hpp  real.hpp  rigid.hpp  slice.hpp  small_vector.hpp  stack.hpp  traits.hpp  types.hpp  variant.hpp  vec.hpp
pouf/python/: dofs.cpp  dofs.hpp  func.cpp  func.hpp  graph.cpp  graph.hpp  metric.cpp  metric.hpp  module.cpp  module.hpp  node.cpp  node.hpp  numpy.cpp  numpy.hpp
pouf/test/: gjk.py  particle.py  rigid.py  snap
pybind/: meson.build  spam.cpp  test.py
slip/: CMakeLists.txt  Makefile  README.md  TODO.md  TODO.org  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  common.hpp  context.hpp  error.hpp  eval.cpp  eval.hpp  hmf.cpp  hmf.hpp  jit.cpp  jit.hpp  kinds.cpp  kinds.hpp  list.hpp  lua.cpp  lua.hpp  main.cpp  meson.build  parse.cpp  parse.hpp  prelude.lua  repl.cpp  repl.hpp  sexpr.cpp  sexpr.hpp  shared.hpp  symbol.cpp  symbol.hpp  syntax.cpp  syntax.hpp  tool.cpp  tool.hpp  type.cpp  (+6 more)
slip/test/: class.el  curry.el  fact.el  fib.el  fib.py  functor.el  io.el  list.el  module.el  monad.el  nullary.el  record.el  run.el
sparse/: CMakeLists.txt  alt.hpp  amt.hpp  main.cpp  sparse.hpp  test.cpp  timer.hpp
